# explorer

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  Cross.toml  LICENSE.txt  PROMPTS.md  README-development.md  README.md  build.rs  install-macos.sh  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
Formula/: explorer.rb
assets/windows/: app.rc
benches/: archive_extraction.rs  image_thumbnails.rs  image_viewer.rs  navigation_pipeline.rs  ngram.rs  properties.rs  recursive_search.rs  resumable_copy.rs  video_thumbnails.rs
brew/Casks/: explorer.rb
brew/Formula/: explorer.rb
docs/assets/: README.md
examples/: readme_assets.rs
src/: app.rs  debug_options.rs  explorer.rs  http_client.rs  lib.rs  loaders.rs  macos_permissions.rs  main.rs  ngram.rs  settings.rs  window_chrome.rs  window_state.rs  windows_file_associations.rs
src/explorer/: actions.rs  address_bar.rs  app_icons.rs  archive_diagnostics.rs  breadcrumb.rs  cache_cleanup.rs  cache_directory.rs  clipboard.rs  codebase_summary.rs  columns.rs  constants.rs  context_menu.rs  dialog.rs  directory_kind.rs  drag_drop.rs  entry.rs  explorer_fs.rs  file_commands.rs  filesystem.rs  folder_size.rs  formatting.rs  git_status.rs  icons.rs  image_preview.rs  image_resize.rs  image_thumbnails.rs  large_icons.rs  mod.rs  mouse_selection.rs  navigation.rs  open_with.rs  properties.rs  rclone.rs  recursive_search.rs  rename.rs  render.rs  resumable_copy.rs  scrollbar.rs  search.rs  selection.rs  (+12 more)
src/image/: color.rs  decode.rs  mod.rs  resize.rs  view.rs
