[package]
name = "explorer"
version = "0.10.0"
edition = "2024"
build = "build.rs"
description = "A GPU-accelerated file explorer built with GPUI."
homepage = "https://github.com/hmerritt/explorer"
repository = "https://github.com/hmerritt/explorer"
license = "MIT"

[features]
benchmarks = []

[package.metadata.bundle]
name = "Explorer"
identifier = "com.hmerritt.explorer"
icon = ["assets/explorer.png"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
ar = "0.9.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
decompress = "0.6.0"
filetime = "0.2.29"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "wayland", "x11", "windows-manifest"] }
globset = "0.4.18"
jwalk = "0.8.1"
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
trash = "5.2.6"
unrar = "0.4.4"
sevenz-rust2 = "0.21.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell"] }
windows-sys = { version = "0.59.0", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "=0.26.0"
icns = "0.4.0"
objc = "0.2"
plist = "1.9.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
criterion = "0.8.2"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "test-support", "wayland", "windows-manifest", "x11"] }

[[bench]]
name = "recursive_search"
harness = false
required-features = ["benchmarks"]

[patch.crates-io]
gpui = { path = "vendor/gpui" }

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
lto = "off"

[profile.bench]
opt-level = 3
debug = 0
lto = "thin"
codegen-units = 1

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true

[dependencies]
paste = "1.0.15"
thousands = "0.2.0"
