[package]
name = "explorer"
version = "0.12.0"
edition = "2024"
build = "build.rs"
description = "A GPU-accelerated file explorer built with GPUI."
homepage = "https://github.com/hmerritt/explorer"
repository = "https://github.com/hmerritt/explorer"
license = "MIT"

[features]
benchmarks = []

[package.metadata.bundle]
name = "Explorer"
identifier = "com.hmerritt.explorer"
icon = ["assets/explorer.png"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
ar = "0.9.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
decompress = "0.6.0"
filetime = "0.2.29"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "wayland", "x11", "windows-manifest"] }
globset = "0.4.18"
futures = "0.3"
jwalk = "0.8.1"
libc = "0.2.177"
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
raw-window-handle = "0.6.2"
notify = "8.2.0"
reqwest = { package = "zed-reqwest", version = "0.12.15-zed", default-features = false, features = ["http2", "rustls-tls-native-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
trash = "5.2.6"
unrar = "0.4.4"
sevenz-rust2 = "0.21.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "=0.26.0"
icns = "0.4.0"
objc = "0.2"
plist = "1.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11.1", default-features = false, features = ["async-std", "raw_handle", "wayland"] }
freedesktop-desktop-entry = { version = "0.8.1", default-features = false }
freedesktop-icons = "0.4.0"
resvg = { version = "0.45.0", default-features = false }
usvg = { version = "0.45.0", default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
criterion = "0.8.2"
flate2 = "1.1.9"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "test-support", "wayland", "windows-manifest", "x11"] }
tar = "0.4.46"
zip = "0.6.6"

[[bench]]
name = "recursive_search"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "navigation_pipeline"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "archive_extraction"
harness = false
required-features = ["benchmarks"]

[patch.crates-io]
gpui = { path = "vendor/gpui" }
decompress = { path = "vendor/decompress" }

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
lto = "off"

[profile.bench]
opt-level = 3
debug = 0
lto = "thin"
codegen-units = 1

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true

[dependencies]
paste = "1.0.15"
thousands = "0.2.0"
